--- a/src/styles/component/LandingPage.css
+++ b/src/styles/component/LandingPage.css
@@ -4,6 +4,7 @@
   background: rgba(0, 0, 0, 0.5);
   position: absolute;
   margin-top: 0;
+  overflow: hidden;
 
   &:after {
     content: "";
