--- a/src/styles/component/ProduceResults.css
+++ b/src/styles/component/ProduceResults.css
@@ -1,5 +1,4 @@
 .produce-results {
   margin-top: 10px;
-  /* height: 70vh; */
-  /* overflow: auto; */
+  padding-bottom: 40px;
 }
